Update to API version 1.0.2 (#158)
